# SkullSolver

./: CMakeLists.txt  README.md  main.cpp
